--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "18.0.35",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
     "typescript": "5.0.4",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1"
