--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "dependencies": {
     "@react-spring/parallax": "^9.7.2",
+    "detect-browser": "^5.3.0",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.4.3"
+    "react-intersection-observer": "^9.4.3",
+    "ua-parser-js": "^1.0.35"
   }
 }
