updated with new team and previous post deployment updates from previous team

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "**/*.ts",
     "**/*.tsx",
     "pages/index.ts"
-, "components/Teams.js"  ],
+, "components/Teams.js", "components/MainPageIntro.jtsx", "pages/blog.js" ],
   "exclude": [
     "node_modules"
   ]
