--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
   "dependencies": {
     "@react-spring/parallax": "^9.7.2",
     "detect-browser": "^5.3.0",
+    "d3": "^7.8.5",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "three": "^0.153.0",
+    "three-spritetext": "^1.8.1",
     "ua-parser-js": "^1.0.35"
   }
 }
